# Yggdrasil-devel

./: .gitignore  README  README.md
Yggdrasil/: CMakeLists.txt  README  README.md
Yggdrasil-LowLevelLib/: .gitignore  README  README.md
Yggdrasil-LowLevelLib/demos/: Receiver.c  ReceiverWithReply.c  Sender.c  SenderBrute.c  SenderWithReply.c
Yggdrasil-LowLevelLib/src/: lightkone.h  lk_api.c  lk_api.h  lk_constants.c  lk_constants.h  lk_data_struct.c  lk_data_struct.h  lk_errors.c  lk_errors.h  lk_hw.c  lk_hw.h  lk_network.c  lk_network.h  lk_utils.c  lk_utils.h
Yggdrasil/core/: lk_runtime.c  lk_runtime.h  proto_data_struct.c  proto_data_struct.h
Yggdrasil/core/legacy/: limited_size_queue.c  limited_size_queue.h  timer_signal.c  timer_signal.h
Yggdrasil/core/protos/: dispatcher.c  dispatcher.h  timer.c  timer.h
Yggdrasil/core/utils/: queue.c  queue.h  queue_elem.c  queue_elem.h  utils.c  utils.h
Yggdrasil/demos/: MessageExchange.c  OneHopBcast.c  OneHopBcastWithTimer.c
Yggdrasil/protos/aggregation/: LiMoSense.c  LiMoSense.h  LiMoSense_alg2.c  LiMoSense_alg2.h  aggregation_functions.c  aggregation_functions.h  aggregation_gen_functions.c  aggregation_gen_functions.h  aggregation_gen_interface.c  aggregation_gen_interface.h  aggregation_interface.c  aggregation_interface.h  contribution.c  contribution.h  drg_single.c  drg_single.h  flow_updating.c  flow_updating.h  flow_updating_single.c  flow_updating_single.h  gap_gen.c  gap_gen.h  multi_root_aggregation.c  multi_root_aggregation.h  push_sum.c  push_sum.h  push_sum_single.c  push_sum_single.h  simpleAggregation.c  simpleAggregation.h  simpleAggregationWithBloomFilter.c  simpleAggregationWithBloomFilter.h  simple_aggregation.c  simple_aggregation.h  simple_bloom_aggregation.c  simple_bloom_aggregation.h  singleTreeAggregation.c  singleTreeAggregation.h  single_tree_aggregation.c  single_tree_aggregation.h  (+2 more)
Yggdrasil/protos/aggregation/average/: gap_avg.c  gap_avg.h  gap_avg_bcast.c  gap_avg_bcast.h  multi_root_avg.c  multi_root_avg.h
Yggdrasil/protos/aggregation/old_interface/: aggregation_functions.c  aggregation_functions.h  aggregation_interface.c  aggregation_interface.h  contribution.c  contribution.h  simpleAggregation.c  simpleAggregation.h  simpleAggregationWithBloomFilter.c  simpleAggregationWithBloomFilter.h  simple_aggregation.c  simple_aggregation.h  simple_bloom_aggregation.c  simple_bloom_aggregation.h  singleTreeAggregation.c  singleTreeAggregation.h  single_tree_aggregation.c  single_tree_aggregation.h  single_tree_node.c  single_tree_node.h
Yggdrasil/protos/apps/: control_app.c  control_app.h
Yggdrasil/protos/communication/broadcast/: push_gossip.c  push_gossip.h
Yggdrasil/protos/communication/point-to-point/: reliable.c  reliable.h
Yggdrasil/protos/control/: commands.c  commands.h  control_command_tree.c  control_command_tree.h  control_discovery.c  control_discovery.h  control_protocol_server.c  control_protocol_server.h  control_protocol_utils.c  control_protocol_utils.h
Yggdrasil/protos/control/utils/: cmdio.h
Yggdrasil/protos/discovery/: connection_manager.c  connection_manager.h  discovery.c  discovery.h  discoveryFull.c  discoveryFull.h  discoveryFullFT.c  discoveryFullFT.h  discoveryPartial.c  discoveryPartial.h  discovery_ft_lb.c  discovery_ft_lb.h
Yggdrasil/protos/discovery/disc_ctr/: discovery_CTR.c  discovery_CTR.h  neighs.c  neighs.h
Yggdrasil/protos/dispatcher/: dispatcher_logger.c  dispatcher_logger.h
Yggdrasil/protos/faultdetection/: faultdetector.c  faultdetector.h  faultdetectorLinkBlocker.c  faultdetectorLinkBlocker.h
Yggdrasil/protos/logger/: byte_msg_logger.c  byte_msg_logger.h
Yggdrasil/protos/membership/gls/: global_membership.c  global_membership.h  members.c  members.h
Yggdrasil/protos/utils/: tcpserver.c  tcpserver.h  topologyManager.c  topologyManager.h  user_util.c  user_util.h
Yggdrasil/tests/: ControlStructureTest.c  GLS_test.c  QueueTest.c  aggregation_tcpclient.c  aggregation_test.c  blablba.c  bloomfilterTest.c  discoveryTest.c  dispatcherTest.c  drg_test.c  flow_updating_test.c  gap_bcast_test.c  gap_test.c  limosense_test.c  multi_root_test.c  pushGossipDemo.c  push_sum_test.c  randomSelectTest.c  reliableTest.c  simpleAggTest.c  simpleAggWithBloomFilterTest.c  simpletcpclient_forAgg.c  simpletcpclient_forAggWBF.c  tcpclient.c
Yggdrasil/tools/: beginexperience.c  buildtree.c  changelink.c  changevalue.c  checktree.c  control_protocol_client.c  debugneighbors.c  disableannounces.c  enableannounces.c  getneighbors.c  reboot.c  shutdown.c  terminateexperience.c
